2009-12-07  Murray Cumming  <murrayc@murrayc.com>

	Python: Trying to stop the PyDateTime_Check() crash.

	* glom/libglom/init.cc: libglom_init(): Call the PyDateTime_IMPORT 
	macro, which is needed to stop PyDateTime_Check() and PyDate_Check() 
	from crashing, at least in my simple test case. It still crashes in 
	Glom though.
	* glom/main.cc: Do not initialize Python here because Glom::init() 
	already did it, though doing it twice does not seem to be a problem.

2009-12-04  Murray Cumming  <murrayc@murrayc-desktop>

	Rename some functions to avoid fear of linking to the wrong one.

	* glom/libglom/python_embed/pygdavalue_conversions.[h|cc]: 
	pygda_value_from_pyobject(), pygda_value_as_pyobject(): Add a glom_ 
	prefix so we know we are not using the copy in pygda.
	* glom/python_embed/glom_python.cc:
	* glom/libglom/python_embed/py_glom_record.cc:
	* glom/libglom/python_embed/py_glom_relatedrecord.cc: Adapted.

2009-12-04  Murray Cumming  <murrayc@murrayc.com>

	Field Definitions: Default value: Fix crash when selecting a date.

	* glom/utility_widgets/datawidget.cc: offer_field_list(), 
	offer_field_layout(), offer_related_record_id_find(): Avoid crashes 
	caused by calling set_transient_for() with a null parent window, 
	for instance from the field definitions dialog.

2009-12-04  Murray Cumming  <murrayc@murrayc.com>

	Field Definitions: Show default value widget for date fields.

	* glom/utility_widgets/datawidget.cc: Constructor: show the 
	hbox_parent widget, so the widgets always show up for the default value 
	in the field definitio dialog for date fields. The details view must 
	be doing this via a show_all() somewhere. 	

2009-12-03  Murray Cumming  <murrayc@murrayc.com>

	Related Records layout: Field formatting: Choices: Fix related choices.

	* glom/mode_design/layout/dialog_layout_details.[h|cc]
	* glom/mode_design/layout/dialog_layout_list_related.[h|cc]:
	Add virtual get_fields_table() and use this in 